--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,19 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#04343A"
     tools:context=".QuizActivity">
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="396dp"
-        android:layout_height="145dp"
+        android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Answer the following Question to Stop the ALARM"
+        android:fontFamily="@font/alegreya_sc"
+        android:text="Be Smart &amp; Stop the ALARM"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="#FFFFFF"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,12 +27,14 @@
     <TextView
         android:id="@+id/tvQstn"
         android:layout_width="311dp"
-        android:layout_height="85dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="What is the 14th letter of alphabet ?"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="#77D8D0"
         android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,9 +57,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="#FFFFFF"
+            android:fontFamily="@font/alegreya_sc"
             android:text="o"
             android:textAlignment="textStart"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -63,9 +70,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="#FFFFFF"
+            android:fontFamily="@font/alegreya_sc"
             android:text="m"
             android:textAlignment="textStart"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -74,9 +83,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="#FFFFFF"
+            android:fontFamily="@font/alegreya_sc"
             android:text="n"
             android:textAlignment="textStart"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -85,9 +96,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:buttonTint="#FFFFFF"
+            android:fontFamily="@font/alegreya_sc"
             android:text="l"
             android:textAlignment="textStart"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="bold" />
     </RadioGroup>
@@ -99,8 +112,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:background="@android:color/holo_green_dark"
+        android:background="#012629"
+        android:fontFamily="@font/alegreya_sc"
         android:text="STOP ALARM"
+        android:textColor="#77D8D0"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,6 +128,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/alegreya_sc"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp"
@@ -139,6 +155,7 @@
         android:layout_marginStart="24dp"
         android:text="1"
         android:textAlignment="center"
+        android:textColor="#012629"
         android:textSize="80sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tvQstn"
