--- a/app/src/main/res/layout/add_alarm.xml
+++ b/app/src/main/res/layout/add_alarm.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/new_alarm"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +28,10 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
+        android:backgroundTint="#000000"
+        android:foregroundTint="#000000"
+        android:headerBackground="@color/common_google_signin_btn_text_dark_focused"
+        android:numbersSelectorColor="#0A0A0A"
         android:timePickerMode="spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,9 +46,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="48dp"
         android:autofillHints=""
+        android:backgroundTint="#000000"
         android:ems="10"
+        android:fontFamily="@font/alegreya_sc"
+        android:foregroundTint="#000000"
         android:hint="@string/enter_alarm_name"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#4B0A0A0A"
+        android:textColorLink="#000000"
+        android:textCursorDrawable="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timePicker"
@@ -53,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/tone"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -67,7 +81,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="36dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/add"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,3:1"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
@@ -82,7 +100,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="36dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/cancel"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,3:1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,9 +119,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
         android:drawableEnd="@drawable/ic_down_arrow"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/select_alarm_tone"
         android:textAlignment="viewStart"
         android:textAllCaps="false"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/etName" />
@@ -109,6 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="Quiz Count"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -123,6 +148,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="48dp"
+        android:backgroundTint="#000000"
+        android:foregroundTint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/btnTone" />
