--- a/app/src/main/res/layout/select_tone.xml
+++ b/app/src/main/res/layout/select_tone.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="SELECT YOUR TONE"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,10 +24,14 @@
         android:id="@+id/btnSelect"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="SELECT"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintDimensionRatio="w,3:1"
         app:layout_constraintEnd_toStartOf="@+id/btnCancel"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,11 +41,14 @@
         android:id="@+id/btnCancel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="36dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="CANCEL"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintDimensionRatio="w,3:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -74,6 +83,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:buttonTint="#000000"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="Tone Chennai Funny" />
 
             <RadioButton
@@ -81,6 +92,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:buttonTint="#000000"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="Tone Energetic" />
 
             <RadioButton
@@ -88,6 +101,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:buttonTint="#000000"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="Tone Iphone" />
 
             <RadioButton
@@ -95,6 +110,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:buttonTint="#000000"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="Tone Kabali" />
 
             <RadioButton
@@ -102,6 +119,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:buttonTint="#000000"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="Tone Kadhale Kadhale" />
 
             <RadioButton
@@ -109,6 +128,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:buttonTint="#000000"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="Tone Morning 96" />
 
             <RadioButton
