--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -130,7 +130,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/alegreya_sc"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="#2CF106"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
